# fractionalCalculus-1

./: README.md
chapter02/: ch02-comment.txt
chapter02/cpp/: CMakeLists.txt  README.md  ex.2.8.B16.cpp  ex2.3.B22_estGlobalPadeMLFfirst.cpp  ex2.3.B28_GaussKronrod.cpp  gammaGslD.cpp  gammaSerB125.cpp  gammaSerF.cpp  gammaSerL.cpp  ompGammaGslD.cpp  ompGammaLibD.cpp  ompGammaLibF.cpp  ompGammaLibL.cpp  ompGammaSerF.cpp  ompGammaSerL44.cpp  runBoost125.sh  runD.sh  trapez.hpp  trapezSerial.hpp  trapezSingle.hpp  unitTestInstallationML.cpp  useful.txt  workflow.txt
chapter02/cpp/include/: c1024.h  c125.h  c1331.h  c27.h  c30.h  c44.h  c9.h
chapter02/mathematica/: 2.1.gammaCoeff.nb  2.1.gammaCoeffHighEqual.nb  2.7.gammaCoeff.nb  2.7.gammaCoeffHighEqual.nb  2.7.gammaCoeffHighShift.nb  GamCoeffHighEqui.wl  GamCoeffHighShift.wl  ex2.8.B17.B18.trapez.nb  ex2.9..B21.pade2.nb  ex2.9.B20.pade1.nb  gammaCoeff.nb  gammaCoeff0.nb  numerics1.txt
chapter03/Mathematica/: ex312.nb  ex502.nb  figure3.eps  frd.nb  test.eps  test2.nb  test4.nb  test5.nb  testLeft.nb
chapter05/Mathematica/: Cassini.nb  Contour.nb  ResourceFunctionFRactionalOrderD.nb  c2.nb  covariant.nb  covariant1.nb  covariant1Gauss.nb  covariant2.nb  integralDefinitions.nb  m3y.nb  pi.nb  pi2.nb  tempR.nb  tempR2.nb  tempR3.nb  tempRSombrero.nb  tempRWS.nb  wkb.nb
chapter07/: 2d.nb  Fourier.nb  HG2.nb  HGMy.nb  ex7n2.nb  r2.nb  rad.nb  rieszN.nb  rieszN1.nb  rieszN2.nb  rieszN4.nb
chapter09/: 1GenerateReverb.nb  2TrainModel.nb  3PredictDelay.nb
chapter10/cpp/: globalPadeMLF.hpp  testGlobalPadeMLF.cpp  testGlobalPadeMLF.sh  testGlobalPadeMLFfirst.cpp  testGlobalPadeMLFfirst.sh
chapter10/mathematica/: RieszPotentialCube.nb  circle.nb  multiDim.nb  pade1.nb  pade2.nb  try.nb  xactSolution.nb
chapter28/: SglAiryERRSa22Plot.nb  WKB.nb
unitTestGSL/: CMakeLists.txt  allcpp.sh  concepts.hpp  cpusumD.cpp  gammaLibD.cpp  gammaLibF.cpp  gammaSerB1024.cpp  gammaSerB1331.cpp  gammaSerD.cpp  globalPadeMLF.hpp  testGlobalPadeMLF.cpp
unitTestGSL/include/: c20.h  c9.h  cxbinio.h  cxtextures.h
unitTestOMP/: CMakeLists.txt  README.md  ompGammaBoostD.cpp  ompGammaBoostL.cpp  ompGammaBoostL1024.cpp  ompGammaBoostL125.cpp  ompGammaBoostL1331.cpp  ompGammaBoostL64.cpp  ompGammaGslD.cpp  ompGammaLanD.cpp  ompGammaLibD.cpp  ompGammaLibF.cpp  ompGammaLibL.cpp  ompGammaSerD.cpp  ompGammaSerF.cpp  ompGammaSerL27.cpp  ompGammaSerL30.cpp  ompGammaSerL44.cpp  runGSL.sh  sources.cmake  templates.hpp  trapez.hpp  workflow.txt
unitTestOMP/include/: c1024.h  c125.h  c1331.h  cx.h  cxcode.h  cxconfun.h
